--- a/.github/workflows/fastbuild_6.6.89_mtk.yml
+++ b/.github/workflows/fastbuild_6.6.89_mtk.yml
@@ -481,6 +481,68 @@ jobs:
           sed -i 's/check_defconfig//' ./common/build.config.gki
           #跳过将uapi标准头安装到 usr/include 目录的不必要操作，节省编译时间
           echo "CONFIG_HEADERS_INSTALL=n" >> ./common/arch/arm64/configs/gki_defconfig
+
+      - name: 启用 Rootless 容器(pasta)支持
+        run: |
+          cd kernel_workspace
+          DEF=./common/arch/arm64/configs/gki_defconfig
+          cat >> "$DEF" <<'EOF'
+          # Rootless containers (Podman + pasta/passt): namespaces + tun/packet + seccomp
+          CONFIG_NAMESPACES=y
+          CONFIG_UTS_NS=y
+          CONFIG_IPC_NS=y
+          CONFIG_PID_NS=y
+          CONFIG_NET_NS=y
+          CONFIG_MNT_NS=y
+          CONFIG_USER_NS=y
+          CONFIG_CGROUP_NS=y
+          CONFIG_TUN=y
+          CONFIG_PACKET=y
+          CONFIG_SECCOMP=y
+          CONFIG_SECCOMP_FILTER=y
+          EOF
+
+      - name: 启用 Rootful Docker/LXC 支持
+        run: |
+          cd kernel_workspace
+          DEF=./common/arch/arm64/configs/gki_defconfig
+          cat >> "$DEF" <<'EOF'
+          # Rootful containers (Docker/LXC): common kernel features
+          CONFIG_VETH=y
+          CONFIG_BRIDGE=y
+          CONFIG_BRIDGE_NETFILTER=y
+          CONFIG_TUN=y
+
+          CONFIG_NETFILTER=y
+          CONFIG_NF_CONNTRACK=y
+          CONFIG_NF_NAT=y
+          CONFIG_NETFILTER_XTABLES=y
+          CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+          CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+          CONFIG_NETFILTER_XT_TARGET_MASQUERADE=y
+
+          # iptables (legacy/nft frontends depend on userspace, but kernel support should exist)
+          CONFIG_IP_NF_IPTABLES=y
+          CONFIG_IP_NF_FILTER=y
+          CONFIG_IP_NF_NAT=y
+          CONFIG_IP_NF_TARGET_MASQUERADE=y
+          CONFIG_IP6_NF_IPTABLES=y
+
+          # nftables (optional but helps iptables-nft userspace)
+          CONFIG_NF_TABLES=y
+          CONFIG_NF_TABLES_IPV4=y
+          CONFIG_NF_TABLES_IPV6=y
+          CONFIG_NFT_CT=y
+          CONFIG_NFT_NAT=y
+          CONFIG_NFT_MASQ=y
+
+          # LXC quality-of-life
+          CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+          CONFIG_UNIX98_PTYS=y
+          CONFIG_POSIX_MQUEUE=y
+          CONFIG_SYSVIPC=y
+          CONFIG_FHANDLE=y
+          EOF
           
       - name: 启用网络功能增强优化配置
         if: inputs.better_net
